--- a/actas-reuniones/2020-09.md
+++ b/actas-reuniones/2020-09.md
@@ -75,7 +75,7 @@ importar el output de BBDuk a Qiime2.
 
 ## Por hacer
 
-- [ ] Leer los artículos para el miércoles.
+- [x] Leer los artículos para el miércoles.
 - [x] Leer el informe de Cristian.
 - [ ] Empezar a escribir documentación.
 - [ ] Asegurarse que los errores de nuestros scripts sean enviados al STDERR (>&2).
@@ -102,12 +102,11 @@ es un buen número.
 
 ## Por hacer:
 
-- Poner tiempo límite de ejecución en los archivos de SLURM del cluster:  
+- [ ] Poner tiempo límite de ejecución en los archivos de SLURM del cluster:  
 `#SBATCH --time=11-00:00:00`
-
-- Leer [este artículo](https://doi.org/10.1371/journal.pcbi.1005510).
-- Mañana a las 20:00 acordar un esquema de nomenclatura para los archivos.
-- Discutir cómo activar Conda desde un script.
+- [ ] Leer [este artículo](https://doi.org/10.1371/journal.pcbi.1005510).
+- [x] Mañana a las 20:00 acordar un esquema de nomenclatura para los archivos.
+- [ ] Discutir cómo activar Conda desde un script.
 
 # 2020-09-17 20:00 UTC-5
 ## Reunión nomenclatura de archivos
@@ -137,14 +136,14 @@ Bowtie2 en el script podemos usar este comando: `sed 's/trim/bt2/'`
 
 ## Por hacer
 
-- Cambiar los scripts de manera que los nombres sigan la convención acordada.
-- Escribir en la documentación la convención de nomenclatura de los archivos.
-- Escribir también las abreviaciones de los pasos del pipeline (e.g. 
+- [ ] Cambiar los scripts de manera que los nombres sigan la convención acordada.
+- [ ] Escribir en la documentación la convención de nomenclatura de los archivos.
+- [ ] Escribir también las abreviaciones de los pasos del pipeline (e.g. 
 Bowtie2=bt2).
-- Dejar `paired` y `unpaired` en los nombres de archivos, y especificar en la
+- [ ] Dejar `paired` y `unpaired` en los nombres de archivos, y especificar en la
 documentación que se trata del output de Trimmomatic (los reads que quedaron con
 pareja y los que no).
-- Leer [artículo de María](http://www.musalit.org/seeMore.php?id=19153).
+- [ ] Leer [artículo de María](http://www.musalit.org/seeMore.php?id=19153).
 
 
 
