actualizar acta con info de la reunión del 2020-09-23

--- a/actas-reuniones/2020-09.md
+++ b/actas-reuniones/2020-09.md
@@ -81,7 +81,7 @@ importar el output de BBDuk a Qiime2.
 - [ ] Asegurarse que los errores de nuestros scripts sean enviados al STDERR (>&2).
 - Juan:
     - [x] Poner actas en GitHub.
-    - [ ] Arreglar script Trimmomatic.
+    - [x] Arreglar script Trimmomatic.
     - [ ] Evaluación del ensamblaje con MetaQUAST.
     - [ ] Revisar si se puede hacer algún tipo de híbrido con metaWRAP.
 
@@ -144,6 +144,38 @@ Bowtie2=bt2).
 documentación que se trata del output de Trimmomatic (los reads que quedaron con
 pareja y los que no).
 - [ ] Leer [artículo de María](http://www.musalit.org/seeMore.php?id=19153).
+
+# 2020-09-23
+
+Estefa nos mostró la documentación que empezó a escribir.
+
+Cristian nos propuso decidir los nombres de los ambientes, volver a correr todo 
+el pipeline y nos contó que Kaiju puede unir su output con el de Kraken.
+
+Miramos los issues de GitHub.
+
+Recordamos que los datos en bruto deben estar protegidos contra escritura con
+`chmod -w archivo`.
+
+Hablamos sobre la posibilidad de paralelizar algunas partes de nuestro pipeline.
+Más info sobre esto [aquí](https://medium.com/@robert.i.sandor/getting-started-with-parallelization-in-bash-e114f4353691). ¿Será conveniente hacerlo?
+
+## Por hacer
+
+- Darle una mirada a los objetivos del trabajo de Estefa este viernes.
+- Hablar sobre proveer un set de datos de prueba con el pipeline.
+- Empezar a aprender cómo se usa Sphinx.
+
+
+
+
+
+
+
+
+
+
+
 
 
 
