Add information about conda environment

--- a/actas-reuniones/2020-09.md
+++ b/actas-reuniones/2020-09.md
@@ -152,6 +152,16 @@ Estefa nos mostró la documentación que empezó a escribir.
 Cristian nos propuso decidir los nombres de los ambientes, volver a correr todo 
 el pipeline y nos contó que Kaiju puede unir su output con el de Kraken.
 
+Decidimos que los ambientes de conda llevarán se agruparan de la siguiente manera:
+
+-Preprocessing: Trimmomatic and Bowtie2
+-Assembly: metaSPAdes, MEGAHIT and MetaQast
+-16S extraction: QIIME2 y BBduk
+-Binning: Kaiju and Kraken
+-Humman2
+-MethaPhlan3
+
+
 Miramos los issues de GitHub.
 
 Recordamos que los datos en bruto deben estar protegidos contra escritura con
