Add information about conda environments.

--- a/actas-reuniones/2020-09.md
+++ b/actas-reuniones/2020-09.md
@@ -154,12 +154,12 @@ el pipeline y nos contó que Kaiju puede unir su output con el de Kraken.
 
 Decidimos que los ambientes de conda llevarán se agruparan de la siguiente manera:
 
--Preprocessing: Trimmomatic and Bowtie2
--Assembly: metaSPAdes, MEGAHIT and MetaQast
--16S extraction: QIIME2 y BBduk
--Binning: Kaiju and Kraken
--Humman2
--MethaPhlan3
+- Preprocessing: Trimmomatic and Bowtie2
+- Assembly: metaSPAdes, MEGAHIT and MetaQast
+- 16S extraction: QIIME2 y BBduk
+- Binning: Kaiju and Kraken
+- Humman2
+- MethaPhlan3
 
 
 Miramos los issues de GitHub.
