añadir acta reunión 2020-09-25

--- a/actas-reuniones/2020-09.md
+++ b/actas-reuniones/2020-09.md
@@ -176,9 +176,17 @@ Más info sobre esto [aquí](https://medium.com/@robert.i.sandor/getting-started
 - Hablar sobre proveer un set de datos de prueba con el pipeline.
 - Empezar a aprender cómo se usa Sphinx.
 
+# 2020-09-25
 
+## Por hacer
 
-
+- Para el miércoles dejar listos los scripts de manera que se activen los 
+ambientes de Conda.
+- Que Estefa nos muestre avances de la introducción.
+- Correr el pipeline.
+- Corregir los scripts para que cumplan con la convención de nombres de los 
+archivos.
+- Buscar programas para el análisis del rendimiento de los scripts.
 
 
 
