--- a/actas-reuniones/2020-09.md
+++ b/actas-reuniones/2020-09.md
@@ -31,7 +31,7 @@ carpeta `conda-envs/`.
 - [x] **Estefa:** Qiime2 y MetaSPADES.
 - [x] **Cristian:** Kaiju.
 - [x] El viernes hacer las diapositivas de la presentación del pipeline.
-- [ ] Ir escribiendo la documentación del pipeline.
+- [x] Ir escribiendo la documentación del pipeline.
 - [x] Mostrar el plugin [SHOGUN](https://library.qiime2.org/plugins/q2-shogun/15/)
 de Qiime2.
 
@@ -77,13 +77,12 @@ importar el output de BBDuk a Qiime2.
 
 - [x] Leer los artículos para el miércoles.
 - [x] Leer el informe de Cristian.
-- [ ] Empezar a escribir documentación.
+- [x] Empezar a escribir documentación.
 - [x] Asegurarse que los errores de nuestros scripts sean enviados al STDERR (>&2).
 - Juan:
     - [x] Poner actas en GitHub.
     - [x] Arreglar script Trimmomatic.
-    - [ ] Evaluación del ensamblaje con MetaQUAST.
-    - [ ] Revisar si se puede hacer algún tipo de híbrido con metaWRAP.
+
 
 # 2020-09-16 11:00 UTC-5
 
@@ -123,9 +122,9 @@ tendrían la siguiente estructura:
 
 ```
 BB190_L001_1_paired_trim.fq.gz
-BB190_L001_1-unpaired_trim.fq.gz
-BB190_L001_2-paired_trim.fq.gz
-BB190_L001_2-unpaired_trim.fq.gz
+BB190_L001_1_unpaired_trim.fq.gz
+BB190_L001_2_paired_trim.fq.gz
+BB190_L001_2_unpaired_trim.fq.gz
 ```
 
 Después de ser procesados por Bowtie2 tendrían la siguiente estructura:  
@@ -170,8 +169,7 @@ Más info sobre esto [aquí](https://medium.com/@robert.i.sandor/getting-started
 ## Por hacer
 
 - [x] Darle una mirada a los objetivos del trabajo de Estefa este viernes.
-- [ ] Hablar sobre proveer un set de datos de prueba con el pipeline.
-- [ ] Empezar a aprender cómo se usa Sphinx.
+
 
 # 2020-09-25
 
@@ -184,13 +182,26 @@ ambientes de Conda.
 
 ## Por hacer
 - [ ] Buscar programas para el análisis del rendimiento de los scripts.
-- [ ] Corregir los scripts para que cumplan con la convención de nombres de los 
-archivos.
 - [ ] Correr el pipeline.
 - [ ] Que Estefa nos muestre avances de la introducción (07 Oct).
 - [ ] Escribir en la documentación la convención de nomenclatura de los archivos.
 - [ ] Escribir también las abreviaciones de los pasos del pipeline (e.g. 
 Bowtie2=bt2).
+- [ ] Hablar sobre proveer un set de datos de prueba con el pipeline.
+- [ ] Evaluación del ensamblaje con MetaQUAST.
+- [ ] Revisar si se puede hacer algún tipo de híbrido con metaWRAP.
+- [x] ¿Cerrar issue de Activar Conda desde los scripts?
+- [x] Quitar requerimiento de ambiente de Conda en `bowtie2.sh`.
+
+
+
+
+
+
+
+
+
+
 
 
 
