Correct some misspelled words

--- a/actas-reuniones/2020-09.md
+++ b/actas-reuniones/2020-09.md
@@ -148,11 +148,11 @@ Estefa nos mostró la documentación que empezó a escribir.
 Cristian nos propuso decidir los nombres de los ambientes, volver a correr todo 
 el pipeline y nos contó que Kaiju puede unir su output con el de Kraken.
 
-Decidimos que los ambientes de conda llevarán se agruparan de la siguiente manera:
+Decidimos que los ambientes de conda se agruparan de la siguiente manera:
 
 - preprocessing: Trimmomatic and Bowtie2
 - assembly: metaSPAdes, MEGAHIT and MetaQast
-- picking16S: QIIME2 y BBduk
+- picking16S: QIIME2 and BBduk
 - binning: Kaiju and Kraken
 - humman2
 - metaphlan
