Update november and december minutes

--- a/actas-reuniones/2020-11.md
+++ b/actas-reuniones/2020-11.md
@@ -107,12 +107,6 @@ microbiomes of competitive cyclists](https://doi.org/10.1186/s40168-017-0320-4)
 para probar que los resultados del pipeline concuerden con un estudio real.
 
 ## Por hacer
-- [ ] Mejorar guidelines.
-- [ ] Hacer SOP.
-- [ ] Hacer ejemplo función de uso.
-- [ ] Implementar nueva convención de nombres.
 - [x] Leer [A genomic catalog of Earth’s microbiomes](https://www.nature.com/articles/s41587-020-0718-6)
-- [ ] Buscar conjuntos de datos para usar.
-- [ ] Agregar Krona al ambiente `metabiome-read-binning`.
-- [ ] Arreglar diagrama de flujo (Metaphlan es un profiler).
-- [ ] Implementar cambio en la convención de nombres.
+- [x] Agregar Krona al ambiente `metabiome-read-binning`.
+- [x] Arreglar diagrama de flujo (Metaphlan es un profiler).
